# COMMUNITY_BE

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  main.py  pyproject.toml
app/: server.py
core/: config.py
core/db/: __init__.py  session.py  transactional.py
core/db/mixins/: timestamp_mixin.py
core/exceptions/: base.py
core/fastapi/middlewares/: request_log.py  response_log.py
core/responses/: base.py
docker/: docker-compose.yml  run.sh
docker/master/config/: bind.cnf  my.cnf
docker/master/mysql-init-files/: create.sql
docker/script/: init_replication.sh
docker/slave/: Dockerfile  docker-entrypoint.sh
docker/slave/config/: my.cnf
docker/slave/mysql-init-files/: create.sql
migrations/: env.py
script/: init_replication.sh  kill-port.ps1  start_container.sh  stop_container.sh
utils/: log_utils.py
