[project]
name = "community-be"
version = "0.1.0"
description = "community backend"
authors = [
    {name = "Jungyu Kim"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
